# PacMan

./: CMakeLists.txt  PacMan.md  enemy.cpp  entity.cpp  entity.h  gemini.md  pacman.cpp  pacman.h  wall.cpp  world.cpp  world.h
files/maps/: debug_map.txt  official_map.txt  simple_map2.txt
gemini_summaries/: gemini-2025-11-29.md  gemini_2025-11-30.md
helpful/: stopwatch test.cpp
maps/: debug_map.txt  simple_map.txt  simple_map2.txt
old_files/factory/: AbstractEntityFactory.h  FactoryProducts.h
old_files/view/: Camera.cpp  Camera.h  EntityView.cpp  EntityView.h  Observer.h  PacManView.cpp  PacManView.h
old_files/view/factory/: SFMLEntityFactory.cpp  SFMLEntityFactory.h
src/: consumable.h  dynamic_entity.cpp  dynamic_entity.h  enemy.cpp  enemy.h  entity.cpp  entity.h  game.cpp  game.h  main.cpp  pacman.cpp  pacman.h  wall.cpp  wall.h  world.cpp
src/Logic/: Map.cpp  Map.h  World.cpp  World.h
src/Logic/Entities/: CollectableEntity.h  Entity.h
src/Logic/Entities/Dynamic_Entities/: DynamicEntity.cpp  DynamicEntity.h  GhostEntity.cpp  GhostEntity.h  PacmanEntity.cpp  PacmanEntity.h
src/Logic/Patterns/: AbstractFactory.h  Observer.h  Renderer.h  Score.cpp  Score.h  Subject.cpp  Subject.h
src/Representation/: Camera.cpp  Camera.h  FactorySFML.cpp  FactorySFML.h  Game.cpp  Game.h
src/Representation/State/: DefeatState.cpp  DefeatState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.h  StateManager.cpp  StateManager.h  VictoryState.cpp  VictoryState.h
src/Representation/View/: ConsumableView.cpp  ConsumableView.h  EntityView.cpp  EntityView.h  GhostView.cpp  GhostView.h  PacManView.cpp  PacManView.h  SFMLRenderer.h  Score.cpp  Score.h
src/Singleton/: Random.cpp  Random.h  RenderWindow.cpp  RenderWindow.h  Stopwatch.cpp  Stopwatch.h
